# wago-api

./: Cargo.toml
driver/src/: driver.rs  properties.rs
wago/commands/: Cargo.toml
wago/commands/src/: command.rs  lib.rs  response.rs  solenoid.rs
wago/commands/src/data_types/: types.rs
wago/driver/: Cargo.toml
wago/driver/src/: driver.rs  lib.rs  properties.rs
