[package]
name = "wago_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
tokio-modbus = "0.16.1"
wago_commands = { path = "../commands" }

[features]
default = ["driver"]
driver = ["dep:tokio"]
